Finished testing for CalendarManager